@@ -1,4 +1,4 @@
-MD5 5189c6d3a8e728076fd89d3f2b2d6ecc ChangeLog 1163
-MD5 966a6894f38fb356ec7d72cad04d6526 pariguide-0.43a.ebuild 887
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
+MD5 05c95f98c288a88f48a29752748d62bc pariguide-0.43a.ebuild 884
+MD5 4bf60f7bba31039c98673f53c9d1bd72 ChangeLog 1260
 MD5 634bbf3664aaa81da8769398869b914f files/digest-pariguide-0.43a 67
